2007-05-24  Alex Graveley  <alex@beatniksoftware.com>

	Fix the Js/CSS side of move/resize...

	* compzilla/chrome/skin/compzilla.css: Make the debug controls 4em
	large and no-wrap and hidden overflow.  Set the contentLog to
	top:0px and bottom:4em. 
	(.uiDlgContent): Make this absolute, top:30px, bottom:8px, so we
	can make the content fill it.
	(.uiDlgContentCenter): Make this absolute too, so we can fill all
	the parent space.
	(.uiDlgBottom): Absolute, at the bottom.

	* compzilla/chrome/content/frame.js (moveResize): Only call
	_configureNativeWindow if _moveResize returns true.
	(_moveResize): Return true if something changed.  Keep this
	simple, only setting the frame extents, and updating the _content
	height/width from it's offsetHeight/Width.
	(frameDragMouseMoveListener): Just read the frame's offsets, the
	CSS will figure the rest out.
	(propertychange): Switch on atom, instead of ifs.

	* compzilla/chrome/content/start.js: Quick workaround for initial
	resizing to adjust for frame border size.

	* compzilla/chrome/content/start.xul: Add debug controls in
	debugActions div, so we can style it.

	* compzilla/chrome/content/windowStack.js: Use var for layer.

2007-05-23  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/frame.js (frameDragMouseMoveListener):
	exit out early if dx and dy are 0, which they seem to be on mouse
	clicks without drag in the title bar.

2007-05-23  Chris Toshok  <toshok@ximian.com>

	[ This gets window titles working for both JS and native windows ]
	
	* compzilla/chrome/content/frame.js (everywhere): use XA_
	properties where possible.
	(chromeless property): use the jquery addClass/removeClass/is
	methods for this, to clean it up a bit.
	(wmName property): flatten the if/else structure a bit.
	(title setter): we need to update both the pyro-namespaced caption
	attribute on the div as well as the contents of the
	windowTitleSpan.
	
	* compzilla/chrome/skin/compzilla.css: make the title caption a