@@ -1,10 +1,16 @@
 2007-05-24  Alex Graveley  <alex@beatniksoftware.com>
 
+	* compzilla/chrome/content/frame.js: (frameDragMouseMoveListener):
+	Only set frame.moving once we have a move delta, to avoid
+	flickering the opactiy.
+
+2007-05-24  Alex Graveley  <alex@beatniksoftware.com>
+
 	Fix the Js/CSS side of move/resize...
 
-	* compzilla/chrome/skin/compzilla.css: Make the debug controls 4em
-	large and no-wrap and hidden overflow.  Set the contentLog to
-	top:0px and bottom:4em. 
+	* compzilla/chrome/skin/compzilla.css: (#debugContent) Make the
+	debug controls 4em large and no-wrap and hidden overflow.
+	(#contentLog): Set the to top:0px and bottom:4em.
 	(.uiDlgContent): Make this absolute, top:30px, bottom:8px, so we
 	can make the content fill it.
 	(.uiDlgContentCenter): Make this absolute too, so we can fill all
